<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/account_info" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_advance"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/increase_sales" />
    </group>
</menu>

